# sentry-auth-oidc-shib

./: Makefile  pyproject.toml
.github/workflows/: publish.yml
oidc/: views.py
