[tool.poetry]
name = "sentry-auth-oidc-shib"
version = "6.0.0"
description = "OpenID Connect authentication provider for Sentry (Shibboleth)"
authors = ["Michael Fuchs <michael.fuchs@hm.edu>"]
license = "Apache 2.0"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
packages = [
    { include = "oidc" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
codecov = "^2.1.12"
pytest = "^7.1.3"

[tool.isort]
profile = "black"

[tool.poetry.plugins."sentry.apps"]
"oidc" = "oidc.apps.Config"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
